@@ -11,7 +11,7 @@
 
     <groupId>com.github</groupId>
     <artifactId>winefox-bot</artifactId>
-    <version>1.9.3</version>
+    <version>1.9.4</version>
 
     <name>winefox-bot</name>
     <description>WineFox Bot 基于 Spring Boot 和 Shiro 的 QQ 机器人</description>
@@ -290,7 +290,6 @@
                             <version>${lombok.version}</version>
                         </dependency>
                     </annotationProcessorPaths>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <!-- 1. 配置 maven-jar-plugin 添加 Loader-Path 到 MANIFEST.MF -->
